[package]
name = "binary_polynomial_mod_algebra"
description = "Basic algebra on univariate binary polynomial"
version = "0.0.1"
edition = "2021"
authors = ["Thomas Prévost"]
license = "MIT OR Apache-2.0"
keywords = ["algebra", "cryptography", "polynomial", "univariate", "binary"]
categories = ["algorithms", "cryptography", "mathematics"]
repository = "https://github.com/thomasarmel/binary_polynomial_mod_algebra"
exclude = [".github/*"]

[dependencies]
num-traits = "0.2"
num-bigint = "0.4"
num-integer = "0.1"
thiserror = "2.0"